Rename package key to unit ID, and installed package ID to component ID.
Comes with Haddock submodule update.

Signed-off-by: Edward Z. Yang <ezyang@cs.stanford.edu>

--- a/compiler/ghc.cabal.in
+++ b/compiler/ghc.cabal.in
@@ -101,7 +101,7 @@ Library
     Include-Dirs: . parser utils
 
     if impl( ghc >= 7.9 )
-        -- We need to set the package key to ghc (without a version number)
+        -- We need to set the unit id to ghc (without a version number)
         -- as it's magic.  But we can't set it for old versions of GHC (e.g.
         -- when bootstrapping) because those versions of GHC don't understand
         -- that GHC is wired-in.
