--- a/libraries/base/base.cabal
+++ b/libraries/base/base.cabal
@@ -342,6 +342,6 @@ Library
             GHC.Event.TimerManager
             GHC.Event.Unique
 
-    -- We need to set the package key to base (without a version number)
+    -- We need to set the unit id to base (without a version number)
     -- as it's magic.
     ghc-options: -this-package-key base
