--- a/configure.ac
+++ b/configure.ac
@@ -160,9 +160,9 @@ FP_COMPARE_VERSIONS([$GhcVersion],[-gt],[7.7],
 AC_SUBST(CMM_SINK_BOOTSTRAP_IS_NEEDED)
 
 FP_COMPARE_VERSIONS([$GhcVersion],[-lt],[7.9],
-                    SUPPORTS_PACKAGE_KEY=NO,
-                    SUPPORTS_PACKAGE_KEY=YES)
-AC_SUBST(SUPPORTS_PACKAGE_KEY)
+                    SUPPORTS_COMPONENT_ID=NO,
+                    SUPPORTS_COMPONENT_ID=YES)
+AC_SUBST(SUPPORTS_COMPONENT_ID)
 
 # GHC is passed to Cabal, so we need a native path
 if test "${WithGhc}" != ""
