--- a/mk/config.mk.in
+++ b/mk/config.mk.in
@@ -461,7 +461,7 @@ GHC_PACKAGE_DB_FLAG = @GHC_PACKAGE_DB_FLAG@
 
 CMM_SINK_BOOTSTRAP_IS_NEEDED = @CMM_SINK_BOOTSTRAP_IS_NEEDED@
 
-SUPPORTS_PACKAGE_KEY = @SUPPORTS_PACKAGE_KEY@
+SUPPORTS_COMPONENT_ID = @SUPPORTS_COMPONENT_ID@
 
 #-----------------------------------------------------------------------------
 # C compiler
