--- a/libraries/ghc-boot/ghc-boot.cabal
+++ b/libraries/ghc-boot/ghc-boot.cabal
@@ -1,17 +1,17 @@
-name:           bin-package-db
+name:           ghc-boot
 version:        0.0.0.0
 license:        BSD3
 maintainer:     ghc-devs@haskell.org
 bug-reports:    glasgow-haskell-bugs@haskell.org
-synopsis:       The GHC compiler's view of the GHC package database format
-description:    This library is shared between GHC and ghc-pkg and is used by
-                GHC to read package databases.
+synopsis:       Shared functionality between GHC and its boot libraries
+description:    This library is shared between GHC, ghc-pkg, and other boot
+                libraries.
                 .
-                It only deals with the subset of the package database that the
-                compiler cares about: modules paths etc and not package
-                metadata like description, authors etc. It is thus not a
-                library interface to ghc-pkg and is *not* suitable for
-                modifying GHC package databases.
+                A note about "GHC.PackageDb": it only deals with the subset of
+                the package database that the compiler cares about: modules
+                paths etc and not package metadata like description, authors
+                etc. It is thus not a library interface to ghc-pkg and is *not*
+                suitable for modifying GHC package databases.
                 .
                 The package database format and this library are constructed in
                 such a way that while ghc-pkg depends on Cabal, the GHC library
@@ -22,7 +22,7 @@ build-type:     Simple
 source-repository head
     type:     git
     location: http://git.haskell.org/ghc.git
-    subdir:   libraries/bin-package-db
+    subdir:   libraries/ghc-boot
 
 Library
     default-language: Haskell2010
@@ -34,6 +34,7 @@ Library
             TypeSynonymInstances
 
     exposed-modules:
+            GHC.Lexeme
             GHC.PackageDb
 
     build-depends: base       >= 4   && < 5,
