--- a/mk/config.mk.in
+++ b/mk/config.mk.in
@@ -341,6 +341,9 @@ FFILibDir=@FFILibDir@
 FFIIncludeDir=@FFIIncludeDir@
 
 
+# Include support for DWARF unwinding
+GhcRtsWithLibdw = @HaveLibdw@
+
 ################################################################################
 #
 #		Paths (see paths.mk)
