gitignore: Ignore sphinx doctrees directories

--- a/.gitignore
+++ b/.gitignore
@@ -98,7 +98,8 @@ _darcs/
 /docs/users_guide/users_guide.pdf
 /docs/users_guide/build-html
 /docs/users_guide/build-pdf
-/docs/users_guide/.doctrees
+/docs/users_guide/.doctrees-html
+/docs/users_guide/.doctrees-pdf
 /driver/ghci/ghc-pkg-inplace
 /driver/ghci/ghci-inplace
 /driver/ghci/ghci.res
