Handle platforms with renamed "readelf"
- Add `-pgmreadelf` option
- Auto configure path and name of "readelf"
- Add settings `readelf command`
- During build of GHC name of tool can be changed with
  `./configure --with-readelf=myreadelf`

Test Plan:
```
make -C testsuite/tests/driver/recomp011
```

Reviewers: austin, bgamari

Subscribers: erikd, thomie

Differential Revision: https://phabricator.haskell.org/D1335

GHC Trac Issues: #10974

--- a/configure.ac
+++ b/configure.ac
@@ -532,6 +532,11 @@ FP_ARG_WITH_PATH_GNU_PROG([RANLIB], [ranlib], [ranlib])
 RanlibCmd="$RANLIB"
 RANLIB="$RanlibCmd"
 
+dnl ** Which readelf to use?
+dnl --------------------------------------------------------------
+FIND_READELF([ReadElfCmd])
+AC_SUBST([ReadElfCmd])
+
 
 # Note: we may not have objdump on OS X, and we only need it on Windows (for DLL checks)
 case $HostOS_CPP in
