--- a/settings.in
+++ b/settings.in
@@ -17,6 +17,7 @@
  ("dllwrap command", "@SettingsDllWrapCommand@"),
  ("windres command", "@SettingsWindresCommand@"),
  ("libtool command", "@SettingsLibtoolCommand@"),
+ ("readelf command", "@SettingsReadElfCommand@"),
  ("perl command", "@SettingsPerlCommand@"),
  ("cross compiling", "@CrossCompiling@"),
  ("target os", "@HaskellTargetOs@"),
