Move win32 tarball download logic to script
This provides an easy way for users and packages to grab the tarballs
necessary to generate a complete source tarball.

--- a/.gitignore
+++ b/.gitignore
@@ -36,6 +36,7 @@ autom4te.cache
 config.log
 config.status
 configure
+missing-win32-tarballs
 
 # -----------------------------------------------------------------------------
 # Ignore any overlapped darcs repos and back up files
