Build system: rename runghc.hs to Main.hs
The build system has trouble with Main modules not called Main.hs. This
change allows a hack in utils/runghc/ghc.mk to be removed.

--- a/utils/runghc/runghc.cabal.in
+++ b/utils/runghc/runghc.cabal.in
@@ -17,7 +17,7 @@ Flag base3
 
 Executable runghc
     Default-Language: Haskell2010
-    Main-Is: runghc.hs
+    Main-Is: Main.hs
 
     if flag(base3)
         Build-Depends: base       >= 3   && < 5,
