--- a/utils/ghc-pwd/ghc-pwd.cabal
+++ b/utils/ghc-pwd/ghc-pwd.cabal
@@ -13,7 +13,7 @@ cabal-version: >=1.10
 
 Executable ghc-pwd
     Default-Language: Haskell2010
-    Main-Is: ghc-pwd.hs
+    Main-Is: Main.hs
     Build-Depends: base       >= 3   && < 5,
                    directory  >= 1   && < 1.3
 
