--- a/utils/hpc/hpc-bin.cabal
+++ b/utils/hpc/hpc-bin.cabal
@@ -13,15 +13,9 @@ Category: Development
 build-type: Simple
 cabal-version: >=1.10
 
-Flag base4
-    Description: Choose the even newer, even smaller, split-up base package.
-
-Flag base3
-    Description: Choose the new smaller, split-up base package.
-
 Executable hpc
     Default-Language: Haskell2010
-    Main-Is: Hpc.hs
+    Main-Is: Main.hs
     Other-Modules: HpcParser
                    HpcCombine
                    HpcDraft
@@ -34,17 +28,10 @@ Executable hpc
                    HpcUtils
                    Paths_hpc_bin
 
-    if flag(base4)
-        Build-Depends: base       >= 4   && < 5
-    if flag(base3)
-        Build-Depends: base       >= 3   && < 4
-    if !flag(base3) && !flag(base4)
-        Build-Depends: base       < 3
-
-    if flag(base3) || flag(base4)
-        Build-Depends: directory  >= 1   && < 1.3,
-                       filepath   >= 1   && < 1.5,
-                       containers >= 0.1 && < 0.6,
-                       array      >= 0.1 && < 0.6
-    Build-Depends: hpc
+    Build-Depends: base       >= 4   && < 5,
+                   directory  >= 1   && < 1.3,
+                   filepath   >= 1   && < 1.5,
+                   containers >= 0.1 && < 0.6,
+                   array      >= 0.1 && < 0.6,
+                   hpc
 
