--- a/utils/runghc/runghc.cabal.in
+++ b/utils/runghc/runghc.cabal.in
@@ -12,18 +12,11 @@ Category: Development
 build-type: Simple
 cabal-version: >=1.10
 
-Flag base3
-    Description: Choose the new smaller, split-up base package.
-
 Executable runghc
     Default-Language: Haskell2010
     Main-Is: Main.hs
 
-    if flag(base3)
-        Build-Depends: base       >= 3   && < 5,
-                       directory  >= 1   && < 1.3,
-                       process    >= 1   && < 1.3
-    else
-        Build-Depends: base < 3
-    Build-Depends: filepath
-
+    Build-Depends: base       >= 3   && < 5,
+                   directory  >= 1   && < 1.3,
+                   process    >= 1   && < 1.3,
+                   filepath
