Testsuite: suggest quoting $(TEST_HC)
Test Plan: it works

Reviewers: bgamari, rwbarton, austin

Reviewed By: austin

Subscribers: rwbarton

Differential Revision: https://phabricator.haskell.org/D1377

--- a/testsuite/.gitignore
+++ b/testsuite/.gitignore
@@ -57,6 +57,8 @@ tmp.d
 *bindisttest_install___dir_bin_ghc.exe.mk
 mk/ghcconfig*_bin_ghc*.mk
 mk/ghcconfig*_bin_ghc*.exe.mk
+mk/ghcconfig*_test___spaces_ghc*.mk
+mk/ghcconfig*_test___spaces_ghc*.exe.mk
 *.imports
 
 # -----------------------------------------------------------------------------
