--- a/libraries/base/base.cabal
+++ b/libraries/base/base.cabal
@@ -354,6 +354,7 @@ Library
         GHC.Event.PSQ
         GHC.Event.Unique
         GHC.Foreign.Internal
+        GHC.Prim.Deprecated
         -- GHC.IOPort -- TODO: hide again after debug
         GHC.Unicode.Internal.Bits
         GHC.Unicode.Internal.Char.DerivedCoreProperties
