Add support for ghc-debug to ghc executable

--- a/.gitmodules
+++ b/.gitmodules
@@ -110,3 +110,7 @@
 [submodule "libraries/exceptions"]
 	path = libraries/exceptions
 	url = https://gitlab.haskell.org/ghc/packages/exceptions.git
+[submodule "ghc-debug"]
+	path = ghc-debug
+	url = https://gitlab.haskell.org/ghc/ghc-debug.git
+
