--- a/rts/configure.ac
+++ b/rts/configure.ac
@@ -33,6 +33,20 @@ GHC_CONVERT_PLATFORM_PARTS([host], [Host])
 FPTOOLS_SET_PLATFORM_VARS([host], [Host])
 FPTOOLS_SET_HASKELL_PLATFORM_VARS([Host])
 
+dnl ** Other RTS features
+dnl --------------------------------------------------------------
+AC_DEFINE_UNQUOTED([USE_LIBDW], [$CABAL_FLAG_libdw], [Set to 1 to use libdw])
+
+AC_DEFINE_UNQUOTED([HAVE_LIBNUMA], [$CABAL_FLAG_libnuma], [Define to 1 if you have libnuma])
+dnl We should have these headers if the flag is set, but check anyways
+dnl in order to define `HAVE_*` macros.
+AS_IF(
+  [test "$CABAL_FLAG_libnuma" = 1],
+  [AC_CHECK_HEADERS([numa.h numaif.h])])
+
+dnl ** Write config files
+dnl --------------------------------------------------------------
+
 AC_OUTPUT
 
 dnl ######################################################################
