hadrian: Extend xattr Darwin hack to cover /lib
As noted in #21506, it is now necessary to remove extended attributes
from `/lib` as well as `/bin` to avoid SIP issues on Darwin.

Fixes #21506.

(cherry picked from commit 78d04cfadfd728bb088b08b1e88905b43cc0360c)

--- a/hadrian/bindist/Makefile
+++ b/hadrian/bindist/Makefile
@@ -147,7 +147,9 @@ install_bin_libdir:
 		fi; \
 	done
 	# Work around #17418 on Darwin
-	if [ -e "${XATTR}" ]; then "${XATTR}" -c -r "$(DESTDIR)$(ActualBinsDir)"; fi
+	if [ -e "${XATTR}" ]; then \
+		"${XATTR}" -c -r "$(DESTDIR)$(ActualBinsDir)"; \
+	fi
 
 install_bin_direct:
 	@echo "Copying binaries to $(DESTDIR)$(WrapperBinsDir)"
@@ -181,6 +183,10 @@ install_lib: lib/settings
 	for i in $(DOCS); do \
 		cp -R $$i "$(DESTDIR)$(docdir)/"; \
 	done
+	# Work around #17418 on Darwin
+	if [ -e "${XATTR}" ]; then \
+		"${XATTR}" -c -r "$(DESTDIR)$(ActualLibsDir)"; \
+	fi
 
 install_docs:
 	@echo "Copying docs to $(DESTDIR)$(docdir)"
